Getting ready for 2.2.9-1 packages.
git-svn-id: svn://svn.debian.org/svn/pkg-samba/branches/woody_unofficial@618 fc4039ab-9d04-0410-8cac-899223bdd6b0

--- a/changelog
+++ b/changelog
@@ -1,3 +1,9 @@
+samba (2.2.9-1.woody) stable; urgency=low
+
+  * New upstream version.
+
+ -- Eloy A. Paris <peloy@debian.org>  Mon, 10 May 2004 12:17:11 -0400
+
 samba (2.2.8a-1.woody) stable; urgency=high
 
   * New upsteam version. Fixes pretty bad security hole announced by
