--- a/changelog
+++ b/changelog
@@ -14,6 +14,8 @@ samba (3.0.14a-4) unstable; urgency=high
   * Upstream fix to make print job cancellations work on big-endian
     systems when talking to RAP-style clients (i.e., smbclient).
     Closes: #311213.
+  * Add build-dependency on libpopt-dev, so that we consistently use the
+    system popt lib instead of the bundled one.
 
  -- Steve Langasek <vorlon@debian.org>  Thu,  2 Jun 2005 07:02:46 -0700
 
