fix libsmbclient.a to be built as non-PIC instead of PIC; closes #279243
git-svn-id: svn://svn.debian.org/svn/pkg-samba/trunk@716 fc4039ab-9d04-0410-8cac-899223bdd6b0

--- a/changelog
+++ b/changelog
@@ -1,3 +1,10 @@
+samba (3.0.14a-5) unstable; urgency=low
+
+  * Fix libsmbclient.a to be built as non-PIC instead of PIC.
+    Closes: #279243.
+
+ -- Steve Langasek <vorlon@debian.org>  Wed,  8 Jun 2005 05:46:52 -0700
+
 samba (3.0.14a-4) unstable; urgency=high
 
   * Last-minute upload for sarge, because I don't listen to anything
