--- a/changelog
+++ b/changelog
@@ -1,3 +1,11 @@
+samba (3.0.14a-6) unstable; urgency=low
+
+  * Use DEB_HOST_ARCH_OS instead of DEB_HOST_GNU_SYSTEM to detect
+    Linux in debian/rules, for compatibility with dpkg-dev >= 1.13.9;
+    add a versioned build-depend accordingly.  Closes: #315955
+
+ -- Steve Langasek <vorlon@debian.org>  Fri,  1 Jul 2005 00:13:12 -0700
+
 samba (3.0.14a-5) unstable; urgency=low
 
   * Fix libsmbclient.a to be built as non-PIC instead of PIC.
