switch to libreadline5
git-svn-id: svn://svn.debian.org/svn/pkg-samba/trunk@719 fc4039ab-9d04-0410-8cac-899223bdd6b0

--- a/changelog
+++ b/changelog
@@ -3,6 +3,7 @@ samba (3.0.14a-6) unstable; urgency=low
   * Use DEB_HOST_ARCH_OS instead of DEB_HOST_GNU_SYSTEM to detect
     Linux in debian/rules, for compatibility with dpkg-dev >= 1.13.9;
     add a versioned build-depend accordingly.  Closes: #315955
+  * Switch to libreadline5.
 
  -- Steve Langasek <vorlon@debian.org>  Fri,  1 Jul 2005 00:13:12 -0700
 
