Vietnamese translation added
git-svn-id: svn://svn.debian.org/svn/pkg-samba/trunk@722 fc4039ab-9d04-0410-8cac-899223bdd6b0

--- a/changelog
+++ b/changelog
@@ -1,3 +1,10 @@
+samba (3.0.14a-7) UNRELEASED; urgency=low
+
+  * Debconf translations:
+    - Added Vietnamese. Closes: #317876
+
+ -- Christian Perrier <bubulle@debian.org>  Tue, 12 Jul 2005 10:07:11 +0200
+
 samba (3.0.14a-6) unstable; urgency=low
 
   * Use DEB_HOST_ARCH_OS instead of DEB_HOST_GNU_SYSTEM to detect
